# CS217_Project

./: .gitignore  CMakeLists.txt  README.md  demo.py  requirements.txt
src/: data_io.cpp  data_io.hpp  demo.cpp  emicp.cu  emicp.h  icp.cpp  icp.cu  icp.h  icp_backup.cpp  icp_cuda.cu  icp_cuda.h  main.cpp  main_demo.cpp  main_emicp.cpp  main_registration.cpp  registration.cpp  support.cu
utils/: modelnet_dataset.py  provider.py  visualize.py
